# sky-oapp-oft

./: .env.example  .gitignore  Anchor.toml  README.md  TESTNET.md  foundry.toml  hardhat.config.ts  layerzero.config.ts  oapp.layerzero.mainnet.config.ts  oapp.layerzero.testnet.config.ts  oft.layerzero.config.ts  oft.layerzero.mainnet.config.ts  oft.layerzero.testnet.config.ts  oft.testnet.layerzero.config.ts  package.json  pnpm-lock.yaml  std-generator.js  tsconfig.json
contracts/: GovernanceControllerOApp.sol  GovernanceMessageCodec.sol  GovernanceMessageEVMCodec.sol  GovernanceMessageGenericCodec.sol  GovernanceOAppReceiver.sol  GovernanceOAppSender.sol  IGovernanceController.sol  MintAndBurnOFTAdapter.sol  MyOFT.sol  OFTAdapter.sol  SkyOFTAdapter.sol  SkyOFTAdapterMintBurn.sol  SkyOFTCore.sol  SkyRateLimiter.sol
contracts-refactor/: GovernanceOApp.sol  GovernanceOAppReceiver.sol  GovernanceOAppSender.sol
contracts-refactor/interfaces/: IGovernanceOApp.sol  IGovernanceOAppSender.sol
contracts/interfaces/: IGovernanceOAppReceiver.sol  IGovernanceOAppSender.sol  IMintBurnVoidReturn.sol  ISkyOFT.sol  ISkyOFTAdapter.sol  ISkyRateLimiter.sol
contracts/oft-dsrl/: DoubleSidedRateLimiter.sol  MABAOFTDSRLFee.sol  OFTAdapterDSRLFee.sol  OFTAdapterDSRLFeeBase.sol  OFTAdapterDoubleSidedRLFee.sol  OFTDSRLFeeBase.sol
deploy/: GovernanceControllerOApp.ts  GovernanceOAppSender.ts  SkyOFTAdapter.ts
deployments/avalanche-testnet/: GovernanceControllerOApp.json  MyOFT.json
deployments/ethereum-mainnet/: GovernanceOAppSender.json  SkyOFTAdapter.json
deployments/solana-mainnet/: OApp.json  OFT.json
deployments/solana-testnet/: OFT.json
programs/external-multicall/: Cargo.toml  README.md
programs/external-multicall/src/: lib.rs
programs/external-multicall/src/instructions/: execute_multicall.rs  mod.rs
programs/governance/: Cargo.toml  LICENSE.md  NOTICE.md  README.md
programs/governance/src/: error.rs  lib.rs  msg_codec.rs  primitive_types_helper.rs
programs/governance/src/instructions/: init_governance.rs  lz_receive.rs  lz_receive_types.rs  lz_receive_types_info.rs  lz_receive_types_v2.rs  lz_receive_types_with_alt.rs  mod.rs  send_oft.rs  set_lz_receive_alt.rs  set_oapp_config.rs  set_remote.rs
programs/governance/src/libs/: mod.rs
programs/governance/src/libs/oapp/: lz_receive_v2.rs  mod.rs
programs/governance/src/state/: governance.rs  mod.rs  remote.rs
programs/governance/tests/: msg_codec.rs
programs/oft/: Cargo.toml
scripts/: SendGovernanceMessage.s.sol  SendRawBytes.s.sol  codama.ts  config.ts  configGov.ts  generate-features.ts  generateGovernance.ts  generateOFT.ts  getBytes32.ts  sendTx.ts  wire-mainnet.ts  wire-testnet.ts  wire-utils.ts
src/: governance-pda-deriver.ts  governance.ts  index.ts  oft-pda-deriver.ts  oft.ts  pda-deriver.ts  types.ts
src/wiring/: config.ts  factory.ts  sdk.ts
tasks/: index.ts
tasks/common/: utils.ts  wire.ts
tasks/evm/: send.ts  set-inbound-rate-limit.ts  set-outbound-rate-limit.ts
tasks/solana/: alt.ts  clearPayload.ts  clearPayloadV2.ts  clearPayloadWithAlt.ts  debug.ts  getLzReceiveAccounts.ts  getRateLimits.ts  index.ts  initPendingMessagesStore.ts  pause.ts  sendOFTMultiIX.ts  setALTs.ts  setAdmin.ts  setDelegate.ts  setInboundRateLimit.ts  setLzReceiveTypes.ts  setOutboundRateLimit.ts  setPauser.ts  setUnpauser.ts  utils.ts
tasks/utils/: lzAccountAlt.ts
test/anchor/: anchor.test.ts
test/foundry/: DoubleSidedRateLimiter.t.sol  Governance.t.sol  GovernanceControllerOApp.t.sol  GovernanceMessageEVMCodec.t.sol  GovernanceMessageGenericCodec.t.sol  MABAOFT.t.sol  MABAOFTSDAO.t.sol  MABAOFTSUSDSL2.t.sol  (+10 more)
(+77 files in other folders)
