[package]
name = "external-multicall"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "external_multicall"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0" }
solana-program = "1.17.31"
solana-helper = "0.1.0"
endpoint = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", rev = "4d17c7b986e85a10ea0b1ec36d769d609968bbd4", features = ["cpi"] }
